[gd_scene load_steps=10 format=3 uid="uid://bwst2xk4wn3l6"]

[ext_resource type="Script" path="res://board/BoardRoot.gd" id="1_7ngv4"]
[ext_resource type="Script" path="res://board/tile_layer/TileOverlay.gd" id="2_g1bmc"]
[ext_resource type="Script" path="res://board/unit_layer/unit_layer_root.gd" id="4_3bm0a"]
[ext_resource type="Script" path="res://board/tile_layer/movement_range.gd" id="4_6mrs1"]
[ext_resource type="Script" path="res://board/tile_layer/deployment_zone.gd" id="4_dn2ii"]
[ext_resource type="PackedScene" uid="uid://fnmkj8vicpov" path="res://board/tile_layer/tile_map.tscn" id="4_yw38a"]
[ext_resource type="Script" path="res://game_session/OverBoardCamera.gd" id="5_eokpn"]
[ext_resource type="Script" path="res://board/tile_layer/retreat_range.gd" id="5_otyml"]
[ext_resource type="PackedScene" uid="uid://g7pncedb7y4v" path="res://board/cursor/player_cursor.tscn" id="7_q4yks"]

[node name="BoardRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7ngv4")

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="ViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="TileOverlay" type="Node2D" parent="ViewportContainer/SubViewport"]
unique_name_in_owner = true
script = ExtResource("2_g1bmc")

[node name="TileMap" parent="ViewportContainer/SubViewport/TileOverlay" instance=ExtResource("4_yw38a")]

[node name="DeploymentZone" type="Node2D" parent="ViewportContainer/SubViewport/TileOverlay"]
script = ExtResource("4_dn2ii")

[node name="MovementRange" type="Node2D" parent="ViewportContainer/SubViewport/TileOverlay"]
unique_name_in_owner = true
script = ExtResource("4_6mrs1")

[node name="RetreatRange" type="Node2D" parent="ViewportContainer/SubViewport/TileOverlay"]
script = ExtResource("5_otyml")

[node name="UnitLayer" type="Node2D" parent="ViewportContainer/SubViewport"]
unique_name_in_owner = true
script = ExtResource("4_3bm0a")
graveyard = Vector2i(-1, -1)

[node name="PlayerCursor" parent="ViewportContainer/SubViewport" instance=ExtResource("7_q4yks")]
unique_name_in_owner = true

[node name="OverBoardCamera" type="Camera2D" parent="ViewportContainer/SubViewport"]
editor_draw_limits = true
script = ExtResource("5_eokpn")

[connection signal="focus_entered" from="." to="." method="__on_focus_entered"]
